--- a/elkTranGen/config.properties
+++ b/elkTranGen/config.properties
@@ -1,1 +1,16 @@
-numberOfFiles=2
+#Set these properties to the needed amounts. Must be integer values.
+
+#Amount of different files to be created.
+numberOfFiles=2 
+
+#Bounds for the amount of nodes to be created in a file.
+lowerBoundAmount=10
+upperBoundAmount=20
+
+#Bounds for the width of all created nodes.
+lowerBoundWidth=2
+upperBoundWidth=20
+
+#Bounds for the height of all created nodes.
+lowerBoundHeight=2
+upperBoundHeight=20
