Added a stepwise increase for dimensions. Also created an abstrract representation of property names.

--- a/elkTranGen/config.properties
+++ b/elkTranGen/config.properties
@@ -1,5 +1,9 @@
 #Set these properties to the needed amounts. Must be integer values.
 
+#Steps the dimensions are given in. Bounds below are multiplied with this step. 
+#e.g. step of 5 will cause the dimensions to be either 5, 10, 15, 20, ...
+step=5
+
 #Amount of different files to be created.
 numberOfFiles=2
 
@@ -7,10 +11,10 @@ numberOfFiles=2
 lowerBoundAmount=10
 upperBoundAmount=20
 
-#Bounds for the width of all created nodes.
+#Bounds for the width of all created nodes. Bounds will be exceeded with step > 1.
 lowerBoundWidth=2
 upperBoundWidth=20
 
-#Bounds for the height of all created nodes.
+#Bounds for the height of all created nodes. Bounds will  be exceeded with step > 1.
 lowerBoundHeight=2
 upperBoundHeight=20
