Ticket #2. Added creation for special case with one big node and lots of smaller ones.

--- a/elkTranGen/config.properties
+++ b/elkTranGen/config.properties
@@ -2,19 +2,30 @@
 
 #Steps the dimensions are given in. Bounds below are multiplied with this step. 
 #e.g. step of 5 will cause the dimensions to be either 5, 10, 15, 20, ...
-step=5
+step=1
 
 #Amount of different files to be created.
-numberOfFiles=2
+numberOfFiles=200
 
 #Bounds for the amount of nodes to be created in a file.
-lowerBoundAmount=10
-upperBoundAmount=20
+lowerBoundAmount=30
+upperBoundAmount=50
 
 #Bounds for the width of all created nodes. Bounds will be exceeded with step > 1.
-lowerBoundWidth=2
-upperBoundWidth=20
+lowerBoundWidth=5
+upperBoundWidth=100
 
 #Bounds for the height of all created nodes. Bounds will  be exceeded with step > 1.
-lowerBoundHeight=2
-upperBoundHeight=20
+lowerBoundHeight=5
+upperBoundHeight=100
+
+#SPECIAL CASE - ONE BIG REGION AND LOTS OF SMALLER ONES.
+enableOneBigRegion = true
+lowerBoundSmallerRegionsHeight=5
+upperBoundSmallerRegionsHeight=20
+lowerBoundSmallerRegionsWidth=5
+upperBoundSmallerRegionsWidth=20
+lowerBoundBigRegionWidth=40
+lowerBoundBigRegionHeight=40
+upperBoundBigRegionsWidth=100
+upperBoundBigRegionsHeight=100
